--- a/roles/fzf/tasks/main.yaml
+++ b/roles/fzf/tasks/main.yaml
@@ -1,14 +1,10 @@
 ---
-- name: make sure git is installed
-  package:
-    name: git
+- name: Install Fzf from Brew
+  homebrew:
+  name:
+      - fzf
     state: present
 
-- name: fetch fzf from github
-  git:
-    repo: 'https://github.com/junegunn/fzf.git'
-    dest: /tmp/fzf/
-    version: HEAD # latest
 
 - name: Run install script
-  script: /tmp/fzf/install --no-key-bindings --no-completion --no-update-rc
+  script: /opt/homebrew/opt/fzf/install --key-bindings --completion --update-rc
