adding fzf completion + keybinds

--- a/roles/fzf/tasks/main.yaml
+++ b/roles/fzf/tasks/main.yaml
@@ -1,9 +1,8 @@
 ---
 - name: Install Fzf from Brew
-  homebrew:
-  name:
-      - fzf
-    state: present
+  community.general.homebrew:
+  name: fzf
+  state: present
 
 
 - name: Run install script
