--- a/roles/fzf/tasks/main.yaml
+++ b/roles/fzf/tasks/main.yaml
@@ -8,9 +8,9 @@
   script: /opt/homebrew/opt/fzf/install --no-key-bindings --no-completion --no-update-rc
 
 
-- name: Copy init.lua
+- name: Copy and Fzf Autocomplete and Keybinds 
   ansible.builtin.copy:
-    dest: "{{ ansible_user_dir }}"
+    dest: "{{ ansible_user_dir }}/.fzf.zsh"
     src: "fzf.zsh"
 
 
