--- a/roles/neovim/tasks/main.yaml
+++ b/roles/neovim/tasks/main.yaml
@@ -8,24 +8,12 @@
     name: "neovim"
     update_homebrew: yes
 
-- name: Config folder
-  ansible.builtin.file:
-    mode: "0755"
-    path: "{{ ansible_user_dir }}/.config/nvim"
-    state: directory
-
-- name: Copy init.lua
-  ansible.builtin.copy:
-    dest: "{{ ansible_user_dir }}/.config/nvim/init.lua"
-    src: "init.lua"
-
-- name: Copy modules
-  ansible.builtin.copy:
-    dest: "{{ ansible_user_dir }}/.config/nvim/lua"
-    src: "lua/"
-
-- name: Copy Lazy Lock
-  ansible.builtin.copy:
-    dest: "{{ ansible_user_dir }}/.config/nvim/lazy-lock.json"
-    src: "lazy-lock.json"
+- name: Clone Pigeon-nvim
+  ansible.builtin.git:
+    clone: yes
+    depth: 1
+    dest: "{{ ansible_user_dir }}/.config/nvim"
+    repo: https://github.com/abdielrumaldo/pigeon-nvim 
+    single_branch: yes
+    update: yes
 
