--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,7 +1,8 @@
 ---
 default_roles:
   # - zsh
-  - oh-my-zsh
-  - fzf
-    #  - bin
-  - neovim
+  # - oh-my-zsh
+  # - fzf
+  - tmux
+  #  - bin
+  # - neovim
